# Study_React

sesac-react-app/: index.html  package-lock.json  package.json  vite.config.js
sesac-react-app/src/: App.jsx  App.module.css  Second.jsx  api.jsx  index.css
sesac-react-app/src/components/: ProtectedRoute.jsx
sesac-react-app/src/components/auth_prac/: AuthHome.jsx  AuthLayout.jsx  AuthLogin.jsx  AuthMyPage.jsx  AuthProtectedRoute.jsx  AuthSignup.jsx  Header.jsx
sesac-react-app/src/components/children_prac/: ChildrenBase.jsx  Layout.jsx
sesac-react-app/src/components/components_prac/: Article.jsx  First.jsx  MenuBoard.jsx  MyButton.jsx  MyList.jsx  ProfileCard.jsx  Second.jsx  Site.jsx  TagsComponent.jsx  Todos.jsx  Welcome.jsx
sesac-react-app/src/layouts/: Layout.jsx
sesac-react-app/src/layouts_prac/: Layout.jsx
sesac-react-app/src/layouts_prob/: Layout.jsx
sesac-react-app/src/pages/: Account.jsx  ErrorPage.jsx  NotFound.jsx  Profile.jsx  Settings.jsx
sesac-react-app/src/pages_prac/: About.jsx  Contact.jsx  Home.jsx  LoginPage.jsx  MyPage.jsx
sesac-react-app/src/pages_prob/: Cart.jsx  Home.jsx  ShopLogin.jsx  ShopProducts.jsx  ShopSignUp.jsx  SimpleLayout.jsx
sesac-react-app/src/router/: index.jsx
sesac-react-app/src/router_prac/: index.jsx
sesac-react-app/src/router_prob/: index.jsx
sesac-react-app/src/store/: useAuthStore.jsx  useCartStore.jsx  useCounterStore.jsx  useThemeStore.jsx  useUserStore.jsx
sesac-react-app/src/url_data_prac/: MovieSearch.jsx  PostDetail.jsx  PostList.jsx
todo-backend/: main.py  pyproject.toml
(+62 files in other folders)
